--- a/scss/_aboutinfobox.scss
+++ b/scss/_aboutinfobox.scss
@@ -79,6 +79,7 @@
 
             padding-inline-start: 0;
             margin-top: 0;
+            margin-bottom: 0;
             
         }
             li {
@@ -109,7 +110,7 @@
         }
         .rightInfoList {
 
-            padding: 1em;
+            
             margin-top: 1em;
 
             background-color: $info-text-background-color;
